Raise java version to 17 (#7401)
* Raise java version to 17

* Simplify some FileMgmt methods

* Only use release property for java version